// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton rendering renders hash instead of the content from markdown with liquid conditionals 1`] = `
"# %%%1%%%
{% if OS == 'iOS' %}

%%%2%%% [%%%3%%%](https://www.apple.com/ios/app-store/)%%%4%%%

{% else %}

%%%5%%% [%%%6%%%](https://play.google.com)%%%7%%%

%%%8%%% {% if  OS == 'iOS' %} %%%9%%% {% else %} %%%10%%% {% endif %} %%%11%%%

{% endif %}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid filters 1`] = `
"# %%%1%%%
%%%2%%%

%%%3%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid functions 1`] = `
"%%%1%%%

%%%2%%%

%%%3%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid variables 1`] = `
"# %%%1%%%
%%%2%%%

%%%3%%% [%%%4%%%](files/file.md \\"%%%5%%%\\")

![%%%6%%%](files/image.png \\"%%%7%%%\\")"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with loops 1`] = `
"# %%%1%%%
{% for element in array %}

%%%2%%%

{% endfor %}

%%%3%%% {% for element in array %} %%%4%%% {% endfor %} %%%5%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with meta 1`] = `
"---
title: '%%%1%%%'
description: '%%%2%%% %%%3%%% %%%4%%%'
key: |
  %%%5%%%
seq:
  - '%%%6%%%'
  - '%%%7%%%'
  - '%%%8%%%'
  - '%%%9%%%'
  - '%%%10%%%'
  - '%%%11%%%'
seq_of_mappings:
  - name: '%%%12%%%'
    age: 13
  - name: '%%%13%%%'
    age: 99
object_inline:
  name: '%%%14%%%'
  age: 33
array_inline:
  - '%%%15%%%'
  - '%%%16%%%'
  - '%%%17%%%'
  - '%%%18%%%'
seq_of_seq:
  - - '%%%19%%%'
    - 65
    - 0.278
  - - '%%%20%%%'
    - 63
    - 0.288
nesting:
  - children:
      - name: '%%%21%%%'
      - name: '%%%22%%%'
---
# %%%23%%%
%%%24%%% %%%25%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with notes 1`] = `
"
{% note info \\"%%%1%%%\\" %}

%%%2%%%

{% endnote %}
- %%%3%%%

  {% note alert \\"%%%4%%%\\" %}

  %%%5%%%

  {% endnote %}"
`;

exports[`skeleton rendering renders hashes instead of content of the text tokens 1`] = `
"# %%%1%%%
%%%2%%%
- %%%3%%%
- %%%4%%%
%%%5%%%
-----------
%%%6%%% **%%%7%%%** %%%8%%% *%%%9%%%*

%%%10%%% %%%11%%%
> %%%12%%%
1. %%%13%%%
2. %%%14%%%

[%%%15%%% %%%16%%%](files/file.md \\"%%%17%%% %%%18%%%\\")

![%%%19%%% %%%20%%%](files/image.png \\"%%%21%%% %%%22%%%\\")"
`;
